[package]
name = "rouchdb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive", "env"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.1.17", features = ["full"] }
url = "2.2.2"
md5 = "0.7.0"
